--- a/src/main/resources/templates/inventory/index.html
+++ b/src/main/resources/templates/inventory/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:replace="/flagments/header::header">
-        <title>Inventory</title>
+        <title>Role</title>
     </th:block>
 </head>
 <body class="materialdesign">
@@ -16,102 +16,101 @@
                     <div class="sparkline13-list shadow-reset">
                         <div class="sparkline13-hd">
                             <div class="main-sparkline13-hd">
-                                <h1>Inventory<span class="table-project-n"></span> </h1>
-                                <div class="sparkline13-outline-icon">
-                                </div>
+                                <h1>Order<span class="table-project-n"></span> Table</h1>
                             </div>
                         </div>
-                        <form action="#" th:action="@{inventory/detail/}" th:object="${itemDto}" method="post">
-
-
+                        <form action="#" th:action="@{/inventory/index.html}" th:object="${searchRecive}" method="post" id="formData">
                             <div class="form-group-inner">
                                 <div class="row">
                                     <div class="col-lg-3">
-                                        <label class="login2 pull-right pull-right-pro">Supplier</label>
+                                        <label class="login2 pull-right pull-right-pro">Form Date</label>
                                     </div>
-                                    <div class="col-lg-9">
-                                        <div class="form-select-list">
-
+                                    <div class="col-lg-5">
+                                        <div class="input-mark-inner mg-b-22">
+                                            <div >
+                                                <input class="form-control" type="date"  th:field="*{formDate}">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group-inner">
-                                <div class="sparkline13-graph">
-                                    <div class="datatable-dashv1-list custom-datatable-overright">
-                                        <div id="toolbar">
-                                            <select class="form-control">
-                                                <option value="">Export Basic</option>
-                                                <option value="all">Export All</option>
-                                                <option value="selected">Export Selected</option>
-                                            </select>
-                                        </div>
-                                        <table id="table" data-toggle="table" data-pagination="true" data-search="true" data-show-columns="true" data-show-pagination-switch="true" data-show-refresh="true" data-key-events="true" data-show-toggle="true" data-resizable="true" data-cookie="true" data-cookie-id-table="saveId" data-show-export="true" data-click-to-select="true" data-toolbar="#toolbar">
-                                            <thead>
-                                            <tr>
-                                                <th data-field="checked">Click</th>
-                                                <th data-field="id">ID</th>
-                                                <th data-field="name" >Name</th>
-                                                <th data-field="price">Price</th>
-                                                <th data-field="amountTotal" >Amount Total</th>
-                                                <th data-field="status" >Status</th>
-                                                <th >Amount in store</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody >
-                                            <tr th:each=" product,count :${products}">
-
-                                                <td>  <input type="checkbox"
-                                                             th:field="*{itemList[__${count.index}__].selected}">
-                                                    <input type="hidden"
-                                                           th:field="*{itemList[__${count.index}__].productId}">
-
-                                                </td>
-                                                <td th:text="${product.productId}">id</td>
-                                                <td th:text="${product.name}">name</td>
-                                                <td th:text="${#numbers.formatDecimal(product.price, 0, 'COMMA', 2, 'POINT')}">price</td>
-                                                <td> <input type="text" id="amountTotal" th:field="*{itemList[__${count.index}__].amount}" class="form-control" name="email" /></td>
-                                                <td th:text="${product.status=='0'? 'active':'not active'}">status</td>
-                                                <td th:text="${product.amountTotal}">
-
-                                                </td>
-
-                                            </tr>
-                                            </tbody>
-                                        </table>
-                                        <div class="form-group-inner">
-                                            <div class="login-btn-inner">
-                                                <div class="row">
-                                                    <div class="col-lg-3"></div>
-                                                    <div class="col-lg-9">
-                                                        <div class="login-horizental cancel-wp pull-left">
-                                                            <button class="btn btn-sm btn-primary login-submit-cs" type="submit">Save Change</button>
-                                                        </div>
-                                                    </div>
+                                <div class="row">
+                                    <div class="col-lg-3">
+                                        <label class="login2 pull-right pull-right-pro">To Date</label>
+                                    </div>
+                                    <div class="col-lg-5">
+                                        <div class="input-mark-inner mg-b-22">
+                                                <div >
+                                                    <input class="form-control" type="date"  th:field="*{toDate}">
                                                 </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group-inner">
+                                <div class="login-btn-inner">
+                                    <div class="row">
+                                        <div class="col-lg-3"></div>
+                                        <div class="col-lg-9">
+                                            <div class="login-horizental cancel-wp pull-left">
+                                                <button class="btn btn-sm btn-primary login-submit-cs" type="submit">Search</button>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </form>
+                        <div class="sparkline13-graph">
+                            <div class="datatable-dashv1-list custom-datatable-overright">
+                                <div id="toolbar">
+                                    <select class="form-control">
+                                        <option value="">Export Basic</option>
+                                        <option value="all">Export All</option>
+                                        <option value="selected">Export Selected</option>
+                                    </select>
+                                </div>
+                                <table id="table" data-toggle="table" data-pagination="true" data-search="true" data-show-columns="true" data-show-pagination-switch="true" data-show-refresh="true" data-key-events="true" data-show-toggle="true" data-resizable="true" data-cookie="true" data-cookie-id-table="saveId" data-show-export="true" data-click-to-select="true" data-toolbar="#toolbar">
+                                    <thead>
+                                    <tr>
+                                        <th data-checkbox="true"></th>
+                                        <th data-field="name" >Id</th>
+                                        <th data-field="address" >Created Date</th>
+                                        <th data-field="phone" >Total Price</th>
+                                        <th data-field="email" >Employee</th>
+                                        <th data-field="employee" >Supplier</th>
+                                        <th >Action</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody >
+                                    <tr th:each=" recivie :${recivies}">
+                                        <td></td>
+                                        <td th:text="${recivie.getReceiveId()}">Id</td>
+                                        <td th:text="${#dates.format(recivie.creatDate, 'dd-MMM-yyyy')}">Created Date</td>
+                                        <td th:text="${#numbers.formatDecimal(recivie.getPriceTotal(), 0, 'COMMA', 2, 'POINT')}">Total Price</td>
+                                        <td th:text="${recivie.getEmployee().getName()}">Employee</td>
+                                        <td th:text="${recivie.getRecevieDetails().get(0).getProduct().getSupplier().getName()}">Supplier</td>
+                                        <td>
+                                            <div class="btn-group project-list-action">
+                                                <a th:href="@{'/inventory/recevie/' + ${recivie.getReceiveId()}}"> <button class="btn btn-white btn-xs"><i class="fa fa-check"></i> Detail</button></a>
+                                                <a th:href="@{'/inventory/edit/' + ${recivie.getReceiveId()}}"> <button class="btn btn-white btn-xs"><i class="fa fa-ban"></i> Edit</button></a>
+                                                <a th:href="@{'/inventory/print/' + ${recivie.getReceiveId()}}"> <button class="btn btn-white btn-xs"><i class="fa fa-print"></i> print</button></a>
 
+                                            </div>
+                                        </td>
+
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<script type="text/javascript">
-    $(function () {
-        $('#s_supplier').on("change", function() {
-            console.log($('#s_supplier option:selected').val());
-            // your ajax call
-
-        });
-    });
-
-</script>
 <th:block th:replace="/flagments/footer::footer"></th:block>
 </body>
 </html>
