thong ke doanh thu

--- a/src/main/resources/templates/inventory/index.html
+++ b/src/main/resources/templates/inventory/index.html
@@ -16,7 +16,7 @@
                     <div class="sparkline13-list shadow-reset">
                         <div class="sparkline13-hd">
                             <div class="main-sparkline13-hd">
-                                <h1>Order<span class="table-project-n"></span> Table</h1>
+                                <h1><span class="table-project-n"></span> Table</h1>
                             </div>
                         </div>
                         <form action="#" th:action="@{/inventory/index.html}" th:object="${searchRecive}" method="post" id="formData">
