--- a/src/main/resources/templates/invoice/revenue.html
+++ b/src/main/resources/templates/invoice/revenue.html
@@ -1,10 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <th:block th:replace="/flagments/header::header">
+        <title>Role</title>
+    </th:block>
 </head>
-<body>
+<body class="materialdesign">
+<th:block th:replace="/flagments/sidebar::sidebar"></th:block>
 
+<div class="admin-dashone-data-table-area">
+    <div class="data-table-area mg-b-15">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="sparkline13-list shadow-reset">
+                        <div class="sparkline13-hd">
+                            <div class="main-sparkline13-hd">
+                                <h1>Order<span class="table-project-n"></span> Table</h1>
+                            </div>
+                        </div>
+                        <form action="#" th:action="@{/admin/invoice/search.html}" th:object="${searchInvoice}" method="post" id="formData">
+                            <div class="form-group-inner">
+                                <div class="row">
+                                    <div class="col-lg-3">
+                                        <label class="login2 pull-right pull-right-pro">Form Date</label>
+                                    </div>
+                                    <div class="col-lg-5">
+                                        <div class="input-mark-inner mg-b-22">
+                                            <div class="col-10">
+                                                <input class="form-control" type="date"  th:field="*{formDate}">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group-inner">
+                                <div class="row">
+                                    <div class="col-lg-3">
+                                        <label class="login2 pull-right pull-right-pro">To Date</label>
+                                    </div>
+                                    <div class="col-lg-5">
+                                        <div class="input-mark-inner mg-b-22">
+                                            <div class="form-group row">
+                                                <div class="col-10">
+                                                    <input class="form-control" type="date"  th:field="*{toDate}">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group-inner">
+                                <div class="login-btn-inner">
+                                    <div class="row">
+                                        <div class="col-lg-3"></div>
+                                        <div class="col-lg-9">
+                                            <div class="login-horizental cancel-wp pull-left">
+                                                <button class="btn btn-sm btn-primary login-submit-cs" type="submit">Search</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                        <div class="sparkline13-graph">
+                            <div class="datatable-dashv1-list custom-datatable-overright">
+                                <div id="toolbar">
+                                    <select class="form-control">
+                                        <option value="">Export Basic</option>
+                                        <option value="all">Export All</option>
+                                        <option value="selected">Export Selected</option>
+                                    </select>
+                                </div>
+                                <table id="table" data-toggle="table" data-pagination="true" data-search="true" data-show-columns="true" data-show-pagination-switch="true" data-show-refresh="true" data-key-events="true" data-show-toggle="true" data-resizable="true" data-cookie="true" data-cookie-id-table="saveId" data-show-export="true" data-click-to-select="true" data-toolbar="#toolbar">
+                                    <thead>
+                                    <tr>
+                                        <th data-checkbox="true"></th>
+                                        <th data-field="name" >Name</th>
+                                        <th data-field="address" >Address</th>
+                                        <th data-field="phone" >Phone</th>
+                                        <th data-field="email" >Email</th>
+                                        <th data-field="employee" >Employee</th>
+                                        <th data-field="active" >Status</th>
+                                        <th >Action</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody >
+                                    <tr th:each=" invoice :${invoices}">
+                                        <td></td>
+                                        <td th:text="${invoice.getConsumer().getName()}">name</td>
+                                        <td th:text="${invoice.getConsumer().getPhoneNumber()}">phone</td>
+                                        <td th:text="${invoice.getConsumer().getAddress()}">address</td>
+                                        <td th:text="${invoice.getConsumer().getEmail()}">email</td>
+                                        <td th:text="${invoice.getEmployee().getName()}">empl</td>
+                                        <td th:switch="${invoice.status}" >
+                                            <p th:case="'0'">Shipping</p>
+                                            <p th:case="'1'">delivered</p>
+                                            <p th:case="'2'">Cancel</p>
+                                        </td>
+                                        <td>
+                                            <div class="btn-group project-list-action">
+                                                <a th:href="@{'/admin/invoice/edit.html?status=1&id=' + ${invoice.getInvoiceId()}}"> <button class="btn btn-white btn-xs"><i class="fa fa-check"></i> Delivered</button></a>
+                                                <a th:href="@{'/admin/invoice/edit.html?status=2&id=' + ${invoice.getInvoiceId()}}"> <button class="btn btn-white btn-xs"><i class="fa fa-ban"></i> Cancel</button></a>
+                                            </div>
+                                        </td>
+
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<th:block th:replace="/flagments/footer::footer"></th:block>
 </body>
 </html>
